# colprint

./: .gitignore  Cargo.toml  README.md
examples/: showcase.rs  simple.rs
src/: colprint.rs  column_format.rs  column_formatter.rs  format_part.rs  format_type.rs  formattable_item.rs  lib.rs  to_formattable_item.rs
